# linkedin-job-agent

./: .env.example  .gitignore  BACKLOG.md  BRAINSTORMING.md  CLAUDE.md  PRD.md  README.md  config.yaml  conftest.py  main.py  pyproject.toml  requirements.txt
agent/: config.py  db.py  deduper.py  improver.py  models.py  notifier.py  scorer.py  scraper.py
tests/: conftest.py  test_auto_confirm.py  test_config.py  test_config_commands.py  test_db.py  test_db_v2.py  test_deduper.py  test_experience_level_validation.py  test_health_check.py  test_improver.py  test_models.py  test_notifier.py  test_notifier_coverage.py  test_notifier_new.py  test_notifier_retry_callback.py  test_notifier_run_help.py  test_pipeline.py  test_scorer.py  test_scraper.py  test_weekly_status.py
